# shyll

./: .gitignore  CMakeLists.txt  data.cmake  shyll-gui.expect.exp  shyll-gui.sh
data/: cnc_daemon_functions.sh
include/: admin_service.h  client.h  cncdaemon.h  handshake.h  handshake_id.h  icmp.h  icmp_encrypt.h  keyboard.h  keylog_service.h  knocking.h  nftables.h  nftables_control_service.h  notify_service.h  server.h  stream.h  stream_exec.h  stream_id.h  util.h
src/: admin_service.c  client.c  cncdaemon.c  handshake.c  handshake_id.c  icmp.c  icmp_encrypt.c  keyboard.c  keylog_service.c  knocking.c  main.c  nftables.c  nftables_control_service.c  notify_service.c  server.c  stream.c  stream_exec.c  stream_id.c  util.c
template/: cncdaemon_data.h.in
